--- a/templates/base.html
+++ b/templates/base.html
@@ -87,8 +87,8 @@
     <footer class="footer">
         <div class="footer__container row">
             <!--Site Map-->
-            <div class="col-3">
-                <h4>Site Map</h4>
+            <div class="footer__item col-12 col-sm-6 col-md-3">
+                <h4 class="footer_title">Site Map</h4>
                 <ul class="footer__list">
                     <li><a href="{{ url_for('search') }}"><i class="fas fa-search"></i> Search</a></li>
                     <li><a href="{{ url_for('home') }}" class="nav-item">Home</a></li>
@@ -98,8 +98,8 @@
                 </ul>
             </div>
              <!--Account-->
-            <div class="col-3">
-                <h4>Account</h4>
+            <div class="footer__item col-12 col-sm-6 col-md-3">
+                <h4 class="footer_title">Account</h4>
                 <ul class="footer__list">
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', profile_name=session.user, profile_id=session.id) }}">Profile</a></li>
@@ -111,21 +111,21 @@
                 </ul>
             </div>
             <!--Referral Links-->
-            <div class="col-3">
+            <div class="footer__item col-12 col-sm-6 col-md-3">
                 <div class="bottom-mar">
-                    <h4>Get What You Need</h4>
-                    <p>Find a wide range of alcohol and mixers here:</p>
-                    <a class="bottom-mar" href="https://www.masterofmalt.com/" target="_blank">Master of Malt</a>
+                    <h4 class="footer_title">Get What You Need</h4>
+                    <p class="bottom-mar">Find a wide range of alcohol and mixers here:</p>
+                    <a href="https://www.masterofmalt.com/" target="_blank" class="affiliate">Master of Malt</a>
                 </div>
                 <div>
                     <p>Grab all the tools you need:</p>
-                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left" target="_blank">Drink Stuff</a>
+                    <a href="https://www.drinkstuff.com/products/cocktail-accessories.asp?nav=left" target="_blank" class="affiliate">Drink Stuff</a>
                 </div>
             </div>
             <!--Social-->
-            <div class="col-3">
-                <h4>Find Us On</h4>
-                <ul class="footer__social footer__list">
+            <div class="footer__item col-12 col-sm-6 col-md-3">
+                <h4 class="footer_title">Find Us On</h4>
+                <ul class="footer__social">
                     <li><a href="https://www.facebook.com/" target="_blank" aria-label="open our facebook page"><i class="fab fa-facebook-square"></i></a></li>
                     <li><a href="https://www.youtube.com/" target="_blank" aria-label="open our youtube page"><i class="fab fa-youtube"></i></a></li>
                     <li><a href="https://www.twitter.com/" target="_blank" aria-label="open our twitter page"><i class="fab fa-twitter"></i></a></li>
