--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -38,7 +38,7 @@
         <h5 class="rec-card__title">{{ cocktail.cocktail_name.title() }}</h5>
         <div class="row">
             <!--Star Rating-->
-            <div class="rec-card__star-rating col-7">
+            <div class="rec-card__star-rating col-12">
                 <p>
                     {% if cocktail.rating == 0 %}
                         No Rating
@@ -52,7 +52,7 @@
             </div>
 
             <!--Make It-->
-            <div class="rec-card__col col-5">
+            <div class="rec-card__col col-12">
                 <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="rec-card__cta cta cta--create">Make It</a>
             </div>
 
@@ -60,7 +60,7 @@
                 <!--Author-->
                 <div class="col-12">
                 <a href="{{ url_for('profile', profile_name=cocktail.author, profile_id=cocktail.author_id) }}">
-                        by <span class="rec-card__author">{{ cocktail.author }}</span>
+                        <span class="mobile-hide">by </span><span class="rec-card__author">{{ cocktail.author }}</span>
                     </a>
                 </div>
             {% endif %}
