--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -69,8 +69,8 @@
         {% if (profile) and (session.id | string == cocktail.author_id | string) %}
             <!--Function Buttons-->
             <div class="rec-card__container">
-                <a href="{{ url_for('cocktail_create', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--edit cta--profile cta--link inline"><i class="fas fa-pencil-alt"></i> Edit</a>
-                <a href="{{ url_for('delete_cocktail', cocktail_id=cocktail._id) }}" class="cta cta--delete cta--profile cta--link inline">
+                <a href="{{ url_for('cocktail_create', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="rec-card__pofile-cta cta cta--edit cta--profile cta--link inline"><i class="fas fa-pencil-alt"></i> Edit</a>
+                <a href="{{ url_for('delete_cocktail', cocktail_id=cocktail._id) }}" class="rec-card__pofile-cta cta cta--delete cta--profile cta--link inline">
                     <i class="fas fa-minus-circle"></i> Delete
                 </a>
             </div>
