--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,8 +223,8 @@ button:focus {
     width: 100%;
 }
 
-.cta---greater {
-    width: 20%;
+.cta--greater {
+    width: 50%;
     margin-right: 20px;
 }
 
@@ -232,8 +232,8 @@ button:focus {
     font-size: 2rem;
 }
 
-.cta---lesser {
-    width: 20%;
+.cta--lesser {
+    width: 30%;
     padding: 12.5px 17.5px;
     margin-right: 20px;
 }
@@ -258,6 +258,19 @@ button:focus {
 .affiliate:hover {
     text-decoration: underline;
     color: var(--brand-create);
+}
+
+/*------------------------------------------------------Buttons / Call To Actions Mobile & Responsive--*/
+@media screen and (max-width: 1024px) {
+    .cta--lesser,
+    .cta--greater  {
+        display: block;
+        width: 100%;
+    }
+
+    .cta--greater {
+        margin-top: 25px;;
+    }
 }
 
 /*------------------------------------------------------Flash Massage--*/
@@ -625,7 +638,7 @@ button:focus {
 
 .page-tagline {
     font-size: 1.5rem;
-    padding-top: 20px;;
+    padding-top: 20px;
 }
 
 .section-spacing {
@@ -637,6 +650,18 @@ button:focus {
     text-align: center;
     font-size: 10rem;
     color: var(--brand-color);
+}
+
+@media screen and (max-width: 576px) {
+    .page-title {
+        font-size: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .page-title {
+        font-size: 2rem;
+    }
 }
 
 /*------------------------------------------------------Hero Image-- */
@@ -736,6 +761,8 @@ button:focus {
 .form__label {
     margin: 35px 0 15px 15px;
     font-weight: 700;
+    font-size: 1.25rem;
+    color: var(--brand-color);
 }
 
 .form__input-info {
@@ -829,6 +856,11 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     opacity: 1;
 }
 /*--(END OF NOT MY OWN CODE)--*/
+@media screen and (max-width: 768px) {
+    .form__label {
+        margin-left: 0px;
+    }
+}
 
 /*------------------------------------------------------Recipe Carsousel--*/
 .rec-carsousel {
@@ -880,6 +912,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     margin-bottom: 100px;
 }
 
+/*------------------------------------------------------Recipe Carsousel Mobile & Responsive--*/
 @media screen and (max-width: 840px) {
     .rec-carsousel__title {
         font-size: 1.5rem;
@@ -971,7 +1004,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     color: var(--brand-color);
 }
 
-/*------------------------------------------------------Recipe Carsousel Mobile & Responsive--*/
+/*------------------------------------------------------No Rec Card Mobile & Responsive--*/
 @media screen and (max-width: 768px) {
     .no-cocktails__text {
         font-size: 2rem;
@@ -1251,6 +1284,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     margin-top: 20px;
 }
 
+/*----------------Profile Mobile & Responsive--*/
 @media screen and (max-width: 915px) {
     .profile-spacing {
         padding-top: 20px;
@@ -1318,6 +1352,10 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     margin: 0 auto;
 }
 
+.cocktail-header__title {
+    margin-bottom: 20px;
+}
+
 .cocktail-header__bookmark-form {
     display: inline;
     margin-left: 30px;
@@ -1351,7 +1389,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 }
 
 .cocktail-header__star-rating {
-    margin-bottom: 16px;
+    margin: 16px 0;
     font-size: 2rem;
     color: var(--brand-cta);
 }
@@ -1371,21 +1409,28 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 }
 
 .cocktail__item-title {
-    margin-bottom: 30px;
+    margin: 30px 0;
+    color: var(--brand-color);
+    font-weight: 700;
 }
 
 .cocktail__row {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .cocktail__img-contianer {
     text-align: center;
-    min-height: 800px;
+    height: 700px;
 }
 
 .cocktail__img {
-    width: 100%;
-    height: 80%;
+    width: 60%;
+    height: 100%;
+    margin-top: 30px;
+}
+
+.cocktail-img-input {
+    text-align: center;
 }
 
 .cocktail__info {
@@ -1420,6 +1465,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 .cocktail-btn--remove {
     font-size: 1.25rem;
     color: red;
+    margin-bottom: 20px;
 }
 
 .cocktail__feedback,
@@ -1435,6 +1481,7 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 16px;
+    background-color: white;
 }
 
 .form-cocktail__input--fixed {
@@ -1444,6 +1491,10 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 .form-cocktail__input--title {
     font-size: 3rem;
     margin-bottom: 16px;
+}
+
+.form-cocktail__input--url {
+    width: 60%;
 }
 
 .form-cocktail__input--amount {
@@ -1471,13 +1522,138 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
 
 .no-item {
     border: none;
-    color: var(--brand-cta);
+    color: var(--brand-create);
 }
 
 .form-tip,
 .instruction {
     height: 160px;
 }
+
+
+/*----------------------------Cocktail Recipe Page and Add/Edit Form Mobile & Responsive--*/
+@media screen and (max-width: 2200px) {
+    .cocktail-header, 
+    .cocktail-body {
+        width: 92%;
+    }
+
+    .form-cocktail__input {
+        font-size: 1rem;
+    }
+
+    .form-cocktail__input--title {
+        font-size: 3rem;
+    }
+
+    .cocktail__img-contianer {
+        height: 500px;
+    }
+
+    .cocktail__img {
+        width: 50%;
+    }
+
+}
+
+@media screen and (max-width: 1440px) {
+    .cocktail__img {
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .cocktail__img {
+        width: 80%;
+    }
+
+    .form-cocktail__text-area {
+        float: none;
+    }
+
+    .instruction {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    #alcohol {
+        width: 100%;
+    }
+
+    #ingredient-name-1 {
+        width: 100%;
+    }
+
+    #ingredient-unit-1 {
+        width: 45%;
+    }
+
+    #ingredient-amount-1 {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .form-cocktail__input--url {
+        width: 100%;
+    }
+
+    .form-cocktail__input--title {
+        font-size: 2rem;
+    }
+
+    .cocktail-header__function--edit,
+    .cocktail-header__function--delete {
+        width: 50%;
+    }
+
+    .cocktail__img-contianer {
+        height: 400px;
+    }
+
+    .form-cocktail__input--amount {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 578px) {
+
+    .form-cocktail__input--title {
+        width: 100%;
+    }
+
+    .cocktail__img {
+        width: 100%
+    }
+
+    .form-cocktail__input {
+        width: 100;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .form-cocktail__input--title {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .cocktail-header__title {
+        font-size: 1.75rem;
+        margin-bottom: 0;
+    }
+
+    .form-cocktail__input--title {
+        width: 100%;
+    }
+
+    .cocktail__img-contianer {
+        height: 300px;
+    }
+}
+
+
 
 /*------------------------------------------------------Footer--*/
 .footer {
@@ -1509,12 +1685,13 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
     display: inline;
 }
 
+/*------------------------------------------------------Footer Mobile & Responsive--*/
 @media screen and (max-width: 1024px) {
-    .footer__list{
+    .footer__list {
         font-size: 1.75rem;
     }
 
-    .footer__list li{
+    .footer__list li {
         margin-top: 16px;
     }
 }
@@ -1531,4 +1708,3 @@ Apdated For My Needs (NOT All MY OWN CODE)--*/
         margin-top: 50px; 
     }
 }
-
