--- a/templates/cocktail-edit.html
+++ b/templates/cocktail-edit.html
@@ -23,12 +23,24 @@
                     </span>
                 </p>
             </div>
+
+            <!--Upload Image-->
+            <div class="row">
+                <div class="cocktail__img-contianer col-12">
+                    <img class="cocktail__img" src="{{ cocktail.image }}" alt="cocktail image">
+                </div>
+                <div class="cocktail-img-input col-12">
+                    <label for="cocktial-img" class="form__label">Copy and Paster Cocktail Image URL</label>
+                    <p>Image will preview if URL valid after you click away.</p>
+                    <p>Commonly the URL will end with the file name and .jpg, .jpeg or .png</p>
+                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form-cocktail__input form-cocktail__input--url" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" required>
+                </div>
+            </div>
             
             <!--Cocktail Info-->
             <div class="cocktail row">
-
                 <!--Cocktail Ingredients-->
-                <div class="cocktail__ingredients col-5">
+                <div class="cocktail__ingredients col-12">
                     <h2 class="cocktail__item-title">Ingredients</h2>
 
                     <!--2 Hard coded inputs which can't be removed as all cocktail must have at least 2 ingrdients-->
@@ -101,7 +113,7 @@
                                 <li class="garnish">
                                     <!--Amount-->
                                     <input type="text" id="garnish-amount-{{ i + 1 }}" name="garnish-amount-{{ i + 1 }}" class="form-cocktail__input form-cocktail__input--amount" 
-                                        pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="1" aria-label="enter garnish amount" value="{{ cocktail.garnish[i][0] }}" required>
+                                        pattern="^[0-9.]{0,5}$" maxlength="5" placeholder="Amount" aria-label="enter garnish amount" value="{{ cocktail.garnish[i][0] }}" required>
                                     
                                     <!--Name-->
                                     <input type="text" id="garnish-name-{{ i + 1 }}" name="garnish-name-{{ i + 1 }}" class="form-cocktail__input" placeholder="Garnish Name" 
@@ -120,7 +132,7 @@
                 </div>
 
                 <!--Cocktail Tools-->
-                <div class="cocktail__tools col-3">
+                <div class="cocktail__tools col-12">
                     <h2 class="cocktail__item-title">Tools</h2>
                     <ul id="cocktail-tools" class="cocktail__info">
                         <!--Tool Selector-->
@@ -167,15 +179,6 @@
                     </ul>
 
                 </div>
-
-                <!--Upload Image-->
-                <div class="cocktail__img-contianer col-4">
-                    <img class="cocktail__img" src="{{ cocktail.image }}" alt="cocktail image">
-                    <label for="cocktial-img" class="form__label">Copy and Paster Cocktail Image URL</label>
-                    <p>Image will preview if URL valid after you click away.</p>
-                    <p>Commonly the URL will end with the file name and .jpg, .jpeg or .png</p>
-                    <input type="url" id="cocktail-img-url" name="cocktail-img-url" class="form__input" placeholder="Enter URL for cocktail image eg. https//www.example.com/image" value="{{ cocktail.image }}" required>
-                </div>
             </div>
 
             <!--Cocktail Instructions-->
@@ -214,10 +217,10 @@
             <div class="row">
                 <div class="form-cocktail__submit col-12">
                     <!--Cancel Add Cocktail-->
-                    <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--delete cta---lesser cta--submit">Cancel</a>
+                    <a href="{{ url_for('cocktail', cocktail_name=cocktail.cocktail_name.replace(' ', '-'), cocktail_id=cocktail._id) }}" class="cta cta--delete cta--lesser cta--submit">Cancel</a>
 
                     <!--Publish-->
-                    <input type="submit" class="cta cta--create cta---greater cta--submit" value="Publish">
+                    <input type="submit" class="cta cta--create cta--greater cta--submit" value="Publish">
                 </div>
             </div>
         </form>
